// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCollapsibleNavGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiCollapsibleNavGroup testClass1 testClass2"
  data-test-subj="test subject string"
  id="id"
/>
`;

exports[`OuiCollapsibleNavGroup props background dark is rendered 1`] = `
<div
  class="ouiCollapsibleNavGroup ouiCollapsibleNavGroup--dark"
  id="id"
/>
`;

exports[`OuiCollapsibleNavGroup props background light is rendered 1`] = `
<div
  class="ouiCollapsibleNavGroup ouiCollapsibleNavGroup--light"
  id="id"
/>
`;

exports[`OuiCollapsibleNavGroup props background none is rendered 1`] = `
<div
  class="ouiCollapsibleNavGroup"
  id="id"
/>
`;

exports[`OuiCollapsibleNavGroup props iconProps renders data-test-subj 1`] = `
<div
  class="ouiCollapsibleNavGroup ouiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="ouiCollapsibleNavGroup__heading"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
    >
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <span
          data-ouiicon-type="bolt"
          data-test-subj="DTS"
        />
      </div>
      <div
        class="ouiFlexItem"
      >
        <h3
          class="ouiTitle ouiTitle--xxsmall ouiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCollapsibleNavGroup props iconSize is rendered 1`] = `
<div
  class="ouiCollapsibleNavGroup ouiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="ouiCollapsibleNavGroup__heading"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
    >
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <span
          data-ouiicon-type="bolt"
        />
      </div>
      <div
        class="ouiFlexItem"
      >
        <h3
          class="ouiTitle ouiTitle--xxsmall ouiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCollapsibleNavGroup props iconType is rendered 1`] = `
<div
  class="ouiCollapsibleNavGroup ouiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="ouiCollapsibleNavGroup__heading"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
    >
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <span
          data-ouiicon-type="bolt"
        />
      </div>
      <div
        class="ouiFlexItem"
      >
        <h3
          class="ouiTitle ouiTitle--xxsmall ouiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCollapsibleNavGroup props title is rendered 1`] = `
<div
  class="ouiCollapsibleNavGroup ouiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="ouiCollapsibleNavGroup__heading"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
    >
      <div
        class="ouiFlexItem"
      >
        <h3
          class="ouiTitle ouiTitle--xxsmall ouiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCollapsibleNavGroup props titleElement can change the rendered element to h2 1`] = `
<div
  class="ouiCollapsibleNavGroup ouiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="ouiCollapsibleNavGroup__heading"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
    >
      <div
        class="ouiFlexItem"
      >
        <h2
          class="ouiTitle ouiTitle--xxsmall ouiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCollapsibleNavGroup props titleSize can be larger 1`] = `
<div
  class="ouiCollapsibleNavGroup"
  id="id"
/>
`;

exports[`OuiCollapsibleNavGroup throws a warning if iconType is passed without a title 1`] = `
<div
  class="ouiCollapsibleNavGroup"
  id="id"
/>
`;

exports[`OuiCollapsibleNavGroup when isCollapsible is true accepts accordion props 1`] = `
<div
  aria-label="aria-label"
  class="ouiAccordion ouiCollapsibleNavGroup ouiCollapsibleNavGroup--withHeading testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-label="aria-label"
      class="ouiAccordion__button ouiAccordion__buttonReverse ouiCollapsibleNavGroup__heading testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      >
        <div
          class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
        >
          <div
            class="ouiFlexItem"
          >
            <h3
              class="ouiTitle ouiTitle--xxsmall ouiCollapsibleNavGroup__title"
              id="id__title"
            >
              Title
            </h3>
          </div>
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="id"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`OuiCollapsibleNavGroup when isCollapsible is true will render an accordion 1`] = `
<div
  class="ouiAccordion ouiCollapsibleNavGroup ouiCollapsibleNavGroup--withHeading"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      class="ouiAccordion__button ouiAccordion__buttonReverse ouiCollapsibleNavGroup__heading"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      >
        <div
          class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
        >
          <div
            class="ouiFlexItem"
          >
            <h3
              class="ouiTitle ouiTitle--xxsmall ouiCollapsibleNavGroup__title"
              id="id__title"
            >
              Title
            </h3>
          </div>
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="id"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;
